--- a/projects.html
+++ b/projects.html
@@ -46,9 +46,15 @@
     </li>
     <li>
       <a href="story.html" class="inline-block bg-[#6a5050] hover:bg-[#a87c7c] text-[#f2ece4] px-6 py-3 rounded-md font-semibold shadow-md hover:scale-105 transition-all duration-300">
-        story
+        Story
+      </a>
+    </li>
+    <li>
+      <a href="POEMS.html" class="inline-block bg-[#6a5050] hover:bg-[#a87c7c] text-[#f2ece4] px-6 py-3 rounded-md font-semibold shadow-md hover:scale-105 transition-all duration-300">
+        Poems
       </a>
     </li>
   </ul>
 </body>
 </html>
+
